google map added, li vertical align solved

--- a/src/sass/partials/_helpers.scss
+++ b/src/sass/partials/_helpers.scss
@@ -207,6 +207,12 @@
 
 .list-checked {
   list-style-image: url("/checked.png");
+  span {
+    display: inline-block;
+    vertical-align: top;
+    padding-bottom: 5px;
+    line-height: 2;
+  }
 }
 
 .icon-xsmall {
